kubernetes/apps/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  externalName: 10.0.10.14
  type: ExternalName
  ports:
  - name: websecure
    port: 8006
    targetPort: 8006
